# allaerris

./: .gitignore  Cargo.toml  PLANNED.md  README.md  ROADMAP.md  clippy.toml  rustfmt.toml
.github/workflows/: audit.yml  build.yml  ci.yml  release.yml
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/: cli.rs  download.rs  file_picker.rs  helpers.rs  main.rs  subcommands.rs  tui.rs
cli/src/subcommands/: add.rs  cache.rs  list.rs  mod.rs  modpack.rs  mods.rs  profile.rs  remove.rs  upgrade.rs
cli/src/subcommands/mods/: add.rs  list.rs  locking.rs  mgmt.rs  remove.rs
cli/src/subcommands/profile/: configure.rs  create.rs  delete.rs  helpers.rs
curseforge-client/: .openapi-generator-ignore  Cargo.toml  README.md
curseforge-client/.openapi-generator/: FILES
curseforge-client/src/: client.rs  lib.rs
curseforge-client/src/apis/: categories_api.rs  files_api.rs  fingerprints_api.rs  games_api.rs  minecraft_api.rs  mod.rs  mods_api.rs
curseforge-client/src/models/: affiliation_service_type.rs  api_response_of_list_of_minecraft_game_version.rs  api_response_of_list_of_minecraft_mod_loader_index.rs  api_response_of_minecraft_game_version.rs  api_response_of_minecraft_mod_loader_version.rs  category.rs  core_api_status.rs  core_status.rs  featured_mods_response.rs  file.rs  file_dependency.rs  file_hash.rs  file_index.rs  file_module.rs  file_relation_type.rs  file_release_type.rs  file_status.rs  fingerprint_fuzzy_match.rs  fingerprint_fuzzy_match_result.rs  fingerprint_match.rs  fingerprint_matches_result.rs  folder_fingerprint.rs  game.rs  game_assets.rs  game_version.rs  game_version_status.rs  game_version_type.rs  game_version_type_status.rs  game_versions_by_type.rs  game_versions_by_type_v2.rs  get_categories_response.rs  get_featured_mods_request_body.rs  get_featured_mods_response.rs  get_files_response.rs  get_fingerprint_fuzzy_matches_response.rs  get_fingerprint_matches_request_body.rs  get_fingerprint_matches_response.rs  get_fuzzy_matches_request_body.rs  get_game_response.rs  get_games_response.rs  (+38 more)
lib/: CHANGELOG.md  Cargo.toml  README.md
lib/src/: checked_types.rs  client.rs  config.rs  cow.rs  error.rs  fs_util.rs  hash.rs  lib.rs  mgmt.rs
lib/src/checked_types/: path_absolute.rs  path_scoped.rs
lib/src/client/: common.rs  curseforge.rs  github.rs  mod.rs  modrinth.rs  multi.rs  schema.rs  service_id.rs
lib/src/client/schema/: author.rs  game_version.rs  license.rs  mod.rs  project.rs  version.rs
lib/src/config/: fs_util.rs  loader.rs  mod.rs  modpack.rs  mods.rs  profile.rs  project_with_version.rs  serde.rs
lib/src/config/profile/: by_path.rs  data.rs
lib/src/mgmt/: cache.rs  download.rs  events.rs  hash.rs  install.rs  lockfile.rs  modpack.rs  mods.rs  ops.rs  server.rs  version.rs
lib/src/mgmt/modpack/: forge.rs  modrinth.rs  version.rs
lib/src/mgmt/mods/: install.rs  scan.rs  update.rs
lib/src/mgmt/ops/: download.rs  install.rs  scan.rs  update.rs
lib/src/mgmt/server/: fabric.rs  forge.rs  maven.rs  neoforge.rs  quilt.rs  vanilla.rs
lib/src/modpack/: add.rs  mod.rs
modrinth-client/: .openapi-generator-ignore  Cargo.toml  README.md
modrinth-client/.openapi-generator/: FILES
modrinth-client/src/: client.rs  lib.rs
modrinth-client/src/apis/: misc_api.rs  mod.rs  notifications_api.rs  projects_api.rs  tags_api.rs  teams_api.rs  threads_api.rs  users_api.rs  version_files_api.rs  versions_api.rs
modrinth-client/src/models/: auth_error.rs  base_project.rs  base_version.rs  category_tag.rs  creatable_project.rs  creatable_project_gallery_item.rs  creatable_report.rs  creatable_version.rs  donation_platform_tag.rs  editable_file_type.rs  editable_project.rs  editable_user.rs  editable_version.rs  forge_update_checker_promos.rs  forge_updates.rs  gallery_image.rs  game_version_tag.rs  get_latest_version_from_hash_body.rs  get_latest_versions_from_hashes_body.rs  hash_list.rs  invalid_input_error.rs  license.rs  license_tag.rs  loader_tag.rs  mod.rs  moderator_message.rs  modifiable_project.rs  modify_report_request.rs  modify_team_member_body.rs  non_search_project.rs  notification.rs  notification_action.rs  patch_projects_body.rs  project.rs  project_dependency_list.rs  project_donation_url.rs  project_identifier.rs  project_license.rs  project_result.rs  report.rs  (+17 more)
openapi/: common.yml  curseforge-gen.yml  curseforge-schema.yaml  modrinth-gen.yml
openapi/template/: Cargo.mustache  _api_field.mustache  _api_param.mustache  lib.mustache  model.mustache
openapi/template/reqwest/: api.mustache  api_mod.mustache  client.mustache
src/: cli.rs  file_picker.rs  helpers.rs  main.rs  tui.rs
src/subcommands/: add.rs  list.rs  mod.rs  modpack.rs  profile.rs  remove.rs
src/subcommands/modpack/: add.rs  configure.rs  delete.rs  mod.rs  upgrade.rs
src/subcommands/profile/: configure.rs  create.rs  delete.rs  helpers.rs  mod.rs
