[package]
name = "ferium"
resolver = "2"
version = "4.5.2"
edition = "2021"
rust-version = "1.79"
authors = [
    "Michael Ziminsky (Z)",
    "Ilesh Thiada (theRookieCoder) <ileshkt@gmail.com>",
    "薛詠謙 (KyleUltimate)",
    "Daniel Hauck (SolidTux)",
]
description = "Fast CLI program for managing Minecraft mods and modpacks from Modrinth, CurseForge, and Github Releases"
exclude = [".github", "tests", "media"]
repository = "https://github.com/gorilla-devs/ferium"
categories = ["command-line-utilities"]
readme = "README.md"
license = "MPL-2.0"
keywords = ["minecraft", "mod-manager", "modrinth", "curseforge", "github"]

[features]
default = []
gui = ["rfd"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"
itertools = "0.13"
relibium = { version = "2", path = "../lib" }
rfd = { version = "0.14", default-features = false, optional = true, features = [
    "xdg-portal",
    "tokio",
] }

anyhow.workspace = true
dirs.workspace = true
once_cell.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
url.workspace = true


[dev-dependencies]
rand = "0.8"

[profile.release]
codegen-units = 1
strip = true
lto = true

[lints]
workspace = true
