[package]
name = "ferium"
resolver = "2"
version = "4.5.2"
edition.workspace = true
rust-version.workspace = true
authors = [
    "Michael Ziminsky (Z)",
    "Ilesh Thiada (theRookieCoder) <ileshkt@gmail.com>",
    "薛詠謙 (KyleUltimate)",
    "Daniel Hauck (SolidTux)",
]
description = "Fast CLI program for managing Minecraft mods and modpacks from Modrinth, CurseForge, and Github Releases"
exclude = [".github", "tests", "media"]
repository = "https://github.com/gorilla-devs/ferium"
categories = ["command-line-utilities"]
readme = "README.md"
license = "MPL-2.0"
keywords = ["minecraft", "mod-manager", "modrinth", "curseforge", "github"]

[features]
default = []
gui = ["rfd"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dialoguer = "0.11"
indicatif = "0.17"
relibium = { version = "2", path = "../lib" }
rfd = { version = "0.14", default-features = false, optional = true, features = [
    "xdg-portal",
    "tokio",
] }
size = "0.4.1"
walkdir = "2"
yansi = "1"

anyhow.workspace = true
async-scoped.workspace = true
dirs.workspace = true
itertools.workspace = true
once_cell.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
url.workspace = true


[dev-dependencies]
rand = "0.8"

[lints]
workspace = true
