[package]
name = "allaerris"
resolver = "2"
version = "0.1.1"
edition.workspace = true
repository.workspace = true
rust-version = "1.80.0"
authors = ["Michael Ziminsky (Z)"]
description = "Fast CLI program for managing Minecraft mods and modpacks from Modrinth, CurseForge, and Github Releases"
categories = ["command-line-utilities"]
readme = "README.md"
license = "MPL-2.0"
keywords = [
    "curseforge",
    "github-releases",
    "minecraft",
    "mod-manager",
    "modrinth",
]

[features]
default = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dialoguer = "0.11"
ferrallay = { version = "0.1", path = "../lib" }
indicatif = "0.17"
size = "0.4.1"
walkdir = "2"
yansi = "1"

anyhow.workspace = true
async-scoped.workspace = true
dirs.workspace = true
itertools.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
url.workspace = true

[lints]
workspace = true
