[package]
name = "curseforge-client"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
description = "HTTP API for CurseForge"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
