[package]
name = "relibium"
version = "2.0.0"
edition = "2021"
rust-version = '1.79.0'
authors = [
    "Michael Ziminsky (Z)",
    "Ilesh Thiada (theRookieCoder) <ileshkt@gmail.com>",
    "Daniel Hauck (SolidTux)",
]
description = "Multi-source backend for managing Minecraft mods and modpacks from Modrinth, CurseForge, and Github Releases"
repository = "https://github.com/gorilla-devs/libium"
readme = "README.md"
license = "MPL-2.0"
keywords = [
    "minecraft",
    "mod-manager",
    "modrinth",
    "curseforge",
    "github-releases",
]

[dependencies]
async_zip = { version = "0.0.17", default-features = false, features = [
    "deflate",
    "tokio",
    "tokio-fs",
] }
paste = "1"
sha1 = "0.10"
thiserror = "1.0"

anyhow.workspace = true
async-scoped.workspace = true
dirs.workspace = true
itertools.workspace = true
once_cell.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde-value = "0.7.0"
tokio = { workspace = true, features = ["fs"] }
url = { workspace = true, features = ["serde"] }

# Supported Clients
# TODO: Make each a feature?
curseforge = { package = "curseforge-client", path = "../curseforge-client", version = "1.0" }
modrinth = { package = "modrinth-client", path = "../modrinth-client", version = "2.7" }
github = { package = "octocrab", version = "0.38", default-features = false, features = [
    "rustls",
    "default-client",
] }

[dev-dependencies]
serde_test = "1.0"

[lints]
workspace = true
