[package]
name = "ferrallay"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
rust-version = "1.80.0"
authors = ["Michael Ziminsky (Z)"]
description = "Multi-source backend for managing Minecraft mods and modpacks from Modrinth, CurseForge, and Github Releases"
readme = "README.md"
license = "MPL-2.0"
keywords = [
    "minecraft",
    "mod-manager",
    "modrinth",
    "curseforge",
    "github-releases",
]

[dependencies]
paste = "1"
serde-value = "0.7.0"
sha1 = "0.10"
thiserror = "1.0"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }

anyhow.workspace = true
async-scoped.workspace = true
dirs.workspace = true
itertools.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
url = { workspace = true, features = ["serde"] }

# Supported Clients
# TODO: Make each a feature?
curseforge = { package = "curseforge-client", path = "../curseforge-client", version = "1.0" }
modrinth = { package = "modrinth-client", path = "../modrinth-client", version = "2.7" }
github = { package = "octocrab", version = "0.39.0", default-features = false, features = [
    "rustls",
    "default-client",
] }

[dev-dependencies]
serde_test = "1.0"

[lints]
workspace = true
